@@ -146,7 +146,7 @@ machine(struct mne *mp)
         case S_SET0: {
                 struct inst io = {0x1C00 | combine, 0x3F};
                 struct inst m = {0x2400 | combine, 0x3F};
-                ebitn(io, m);
+                ebitn(io, m, /*N offset*/6);
                 break;
         }
 
@@ -166,7 +166,7 @@ machine(struct mne *mp)
         case S_T0SN: {
                 struct inst io = {0x1800 | combine, 0x3F};
                 struct inst m = {0x2000 | combine, 0x3F};
-                ebitn(io, m);
+                ebitn(io, m, /*N offset*/6);
                 break;
         }
 
@@ -226,6 +226,7 @@ machine(struct mne *mp)
 
         case S_SWAPC:
               def.mask = 0x3F;
+              eswapc(def, /*N offset*/6);
               break;
 
         case S_COMP:
