@@ -146,7 +146,7 @@ machine(struct mne *mp)
         case S_SET0: {
                 struct inst io = {0x3800 | combine, 0x7F};
                 struct inst m = {0x4800 | combine, 0x7F};
-                ebitn(io, m);
+                ebitn(io, m, /*N offset*/7);
                 break;
         }
 
@@ -165,7 +165,7 @@ machine(struct mne *mp)
         case S_T0SN: {
                 struct inst io = {0x3000 | combine, 0x7F};
                 struct inst m = {0x4000 | combine, 0x7F};
-                ebitn(io, m);
+                ebitn(io, m, /*N offset*/7);
                 break;
         }
 
@@ -221,6 +221,7 @@ machine(struct mne *mp)
 
         case S_SWAPC:
               def.mask = 0x7F;
+              eswapc(def, /*N offset*/7);
               break;
 
         case S_COMP:
